hw7-ingress/deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app
  labels:
    app: course-app
spec:
  replicas: 10
  selector:
    matchLabels:
      app: course-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: course-app
    spec:
      containers:
      - name: course-app
        image:  course-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: course-app-service
  labels:
    app: course-app
spec:
  type: ClusterIP
  selector:
    app: course-app
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
