hw7-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - course-app.local
    secretName: course-app-tls
  rules:
  - host: course-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: course-app-service
            port:
              number: 8080
